@@ -20,16 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 202)
-(Parent-Version lpmud 3-3 201)
-(Version-Log "Too long evaluation errors in a master apply during a compilation are
-considered compilation errors.
-Removed a crasher in swap.c.
-In functions without typechecking, calls to undefined functions generate
-a warning (before they were silently prototyped).")
+(Project-Version lpmud 3-3 203)
+(Parent-Version lpmud 3-3 202)
+(Version-Log "Separated linenumbers from the main program memory block.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 20 Apr 2002 12:51:10 -0600")
+(Checkin-Time "Sun, 21 Apr 2002 10:48:59 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -63,7 +59,7 @@ a warning (before they were silently prototyped).")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.6 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.40 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.265 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.266 644))
   (HISTORY (lpmud/f/49_HISTORY 1.254 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -135,18 +131,18 @@ a warning (before they were silently prototyped).")
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.20 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.14 644))
   (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.29 644))
-  (src/exec.h (lpmud/c/32_exec.h 1.34.1.20 644))
+  (src/exec.h (lpmud/c/32_exec.h 1.34.1.21 644))
   (src/files.h (lpmud/I/49_files.h 1.1 644))
   (src/files.c (lpmud/I/50_files.c 1.14 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.7 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.57 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.58 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.14 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.22 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.23 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.24 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.10 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.10 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.9 644))
@@ -164,7 +160,7 @@ a warning (before they were silently prototyped).")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.15 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.68 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.69 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.4 644))
   (src/parser.c (lpmud/L/13_parser.c 1.1 644))
@@ -214,7 +210,7 @@ a warning (before they were silently prototyped).")
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.11 644))
   (src/port.c (lpmud/39_port.c 1.17.1.6 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.15 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.16 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -234,11 +230,11 @@ a warning (before they were silently prototyped).")
   (src/strfuns.c (lpmud/C/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.15 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
-  (src/swap.c (lpmud/25_swap.c 1.36.1.23 644))
+  (src/swap.c (lpmud/25_swap.c 1.36.1.24 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
   (src/sysmalloc.c (lpmud/23_sysmalloc. 1.1 644))
   (src/telnet.h (lpmud/22_telnet.h 1.5.1.2 644))
-  (src/typedefs.h (lpmud/D/50_typedefs.h 1.12.1.3 644))
+  (src/typedefs.h (lpmud/D/50_typedefs.h 1.12.1.4 644))
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.13 644))
   (src/xalloc.h (lpmud/G/51_xalloc.h 1.15 644))
